--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -20,13 +20,18 @@ body {
 h1 {
   margin-top: 0
 }
+
+.row {
+}
+
 .cloth, .food, .house, .transport {
   border: solid black 1px;
   margin-bottom: 10px
 }
 
 .col-md-4 img, .col-xs-4 img {
-  width: 60%
+  width: 60%;
+  height: 160px
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -54,6 +59,22 @@ h1 {
   font-size: 40px;
 }
 
+.jumbotron {
+  position: fixed;
+  z-index: 100;
+  left: 15px;
+  top: 15px;
+  right: 15px
+}
+
+.cloth {
+  margin-top: 50px;
+}
+
+.middle {
+  text-align: center;
+}
+
 .rdSlider {
   .rs-range-color  {
     background-color: #33B5E5;
@@ -79,11 +100,17 @@ h1 {
 } 
 
 .slider.slider-horizontal {
-    width: 90%;
-    margin-bottom: 20px;
+    width: 70%;
+    margin: 10px auto 0 auto;
     .slider-track {
       height: 5px
     }
+}
+
+.rdSlider .rs-handle {
+    background-color: #33B5E5;
+    padding: 7px;
+    border: 2px solid #33B5E5;
 }
 
 .verticleSlider {
@@ -115,6 +142,22 @@ h1 {
   background-image: -webkit-linear-gradient(top, #33B5E5 0%, #33B5E5 100%);
 }
 
+.btn-group {
+  margin-top: 40px;
+}
+
+.btn-group button {
+  width: 100px
+}
+
+.btn {
+  font-size: 12px;
+  padding: 4px;
+}
+
+li a {
+  cursor: pointer;
+}
 
 /* Custom page footer */
 .footer {
@@ -127,6 +170,13 @@ h1 {
   margin: 30px 0;
 }
 
+.center {
+  margin: 0 auto
+}
+
+.jumbotron {
+    padding: 10px;
+  }
 
 
 /* Responsive: Portrait tablets and up */
@@ -154,17 +204,24 @@ h1 {
   }
 }
 
+.notation {
+  width: 20%
+}
+
 
 @media screen and (max-width: 768px) {
   .rdSlider {
-    height: 120px !important;
-    width: 120px !important;
+    height: 100px !important;
+    width: 100px !important;
   }
   .rs-container {
-    height: 120px !important;
-    width: 120px !important;
+    height: 100px !important;
+    width: 100px !important;
   }
-  .jumbotron {
-    padding: 10px;
+  .col-md-4 img, .col-xs-4 img {
+    height: 100px;
+  }
+  .cloth {
+    margin-top: 60px;
   }
 }
