--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -26,7 +26,7 @@ h1 {
 }
 
 .screen {
-  margin-top: 80px;
+  margin-top: 120px;
 }
 
 .explain {
@@ -39,10 +39,6 @@ h1 {
 }
 
 .cloth, .food, .house, .transport {
-}
-
-.transport-slider {
-  padding-top: 20px
 }
 
 .bg-grey {
@@ -85,12 +81,16 @@ h1 {
 
 .jumbotron {
   position: fixed;
-  z-index: 100;
+  z-index: 50;
   left: 15px;
   top: 15px;
   right: 15px;
   background-image: url("../images/background.png");
-  background-size: 200px 60px;
+  background-size: 100% 100%;
+  padding: 30px;
+  color: white;
+  max-width: 730px;
+  text-align: center;
 }
 
 .cloth {
@@ -130,6 +130,7 @@ h1 {
 }
 
 .house-slider {
+  padding-top: 20px;
   .slider.slider-horizontal {
     width: 70%;
     margin: 0px 15% -5px 15%;
@@ -154,6 +155,8 @@ h1 {
 }
 
 .transport-slider {
+  padding-top: 20px;
+  padding-left: 50px;
   .slider.slider-horizontal {
     width: 70%;
     margin: 0px 0% -5px 0%;
@@ -168,10 +171,10 @@ h1 {
     vertical-align: middle;
   }
   .measure {
-    margin-left: 60%;
+    margin-left: 30%;
     line-height: 15px;
     background: white;
-    margin-right: 0%;
+    margin-right: 30%;
     text-align: center;
     border-radius: 6px;
     color: grey;
@@ -181,10 +184,6 @@ h1 {
       font-size: 15px
     }
   }
-}
-
-.house-slider {
-  padding-top: 20px
 }
 
 .rdSlider .rs-handle {
@@ -259,10 +258,85 @@ li a {
   margin: 0 auto
 }
 
-.jumbotron {
-    padding: 30px;
+.result {
+  button {
+    margin-top: 10px;
+    height: 35px;
+    background-color: #3c6177;
+    color: white;
+    font-size: 15px !important
   }
 
+  button:hover, button:focus {
+    color: white
+  }
+}
+
+#lightbox {
+  background-color: #e9f2e7;
+  z-index: 100;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  position: fixed;
+  z-index: 100;
+  left: 0px;
+  top: 0px;
+  bottom: 15px;
+  right: 0px;
+  padding: 30px;
+  max-width: 730px;
+  height:100%;
+  text-align: center;
+  display: none;
+  font-size: 20px;
+  .statement {
+    margin-top: 20%;
+    span#treeNumber {
+      font-size: 40px !important;
+      color: #008283;
+      font-weight: bold;
+    }
+  }
+
+  .share {
+    position: absolute;
+    left: 30%;
+    right: 30%;
+    bottom: 20%;
+  }
+  .share a.facebook {
+    width: 44px;
+    background-size: 40px 40px;
+    background-image: url(../images/share_facebook.svg);
+  }
+  .share a.twitter {
+    width: 44px;
+    background-size: 40px 40px;
+    background-image: url(../images/share_twitter.svg);
+  }
+  .share a {
+    display: inline-block;
+    height: 44px;
+    margin: 0 5px;
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    opacity: .6;
+    -webkit-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+  }
+  .share a:hover {
+    opacity: 1;
+  }
+}
+
+#treeArea {
+  margin-top: 40px;
+  img {
+  width: 130px;
+  }
+}
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
@@ -289,7 +363,6 @@ li a {
   /* Remove the bottom border on the jumbotron for visual effect */
   .jumbotron {
     border-bottom: 0;
-    color: white;
   }
 }
 
@@ -315,5 +388,85 @@ li a {
   }
   .bg-grey, .bg-white{
     height: 120px;
+  }
+  .col-md-4 img, .col-xs-4 img {
+    width: 80%;
+    height: 100px
+  }
+  .explain {
+    margin-top: -10px
+  }
+  #cloth1, #cloth2, #food1, #food2 {
+    height: 90px !important;
+    margin-top: 10px;
+  }
+  .house-slider {
+    padding-top: 10px;
+    .slider.slider-horizontal {
+      width: 60%;
+      margin: 0px 0% 5px 2%;
+      .slider-track {
+        height: 5px
+      }
+    }
+    .measure {
+      display: inline-block;
+      width: 35%;
+      margin-left: 5px;
+      margin-right: 0;
+      border-radius: 4px;
+      font-size: 10px;
+      span {
+        color: black;
+        font-size: 13px
+      }
+    }
+  }
+  .slider.slider-horizontal .slider-handle {
+    width: 20px;
+    height: 20px;
+    margin-top: -7.5px;
+  }
+  .transport-slider {
+    padding-top: 0px;
+    padding-left: 15px;
+    .slider.slider-horizontal {
+      width: 100%;
+      margin: 0px 0% -5px 0%;
+      .slider-track {
+        height: 5px;
+      }
+    }
+    .tool {
+      width: auto;
+      display: inline-block;
+      line-height: 15px;
+      vertical-align: middle;
+      font-size: 12px;
+    }
+    .measure {
+      margin-left: 0%;
+      line-height: 10px;
+      background: white;
+      margin-right: 0%;
+      text-align: center;
+      border-radius: 6px;
+      color: grey;
+      font-size: 10px;
+      margin-top: -5px;
+      margin-bottom: -5px;
+      display: inline-block;
+      width: 40%;
+      span {
+        color: black;
+        font-size: 13px
+      }
+    }
+  }
+  #treeArea img {
+    width: 90px
+  }
+  #lightbox .share {
+    bottom: 10%;
   }
 }
